# helix

./: Cargo.toml  flake.nix
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  handlers.rs
helix-term/src/commands/: typed.rs
helix-term/src/ui/: editor.rs
helix-vcs/: Cargo.toml
helix-vcs/src/: jj.rs  lib.rs
helix-view/src/: document.rs  editor.rs  gutter.rs
