[package]
name = "helix-vcs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-core = { path = "../helix-core" }
helix-event = { path = "../helix-event" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
parking_lot = "0.12"
arc-swap = { version = "1.7.1" }

gix = { version = "0.70.0", features = ["parallel", "attributes", "status"], default-features = false, optional = true }
imara-diff = "0.1.7"
anyhow = "1"

jj-lib = { version = "0.25", optional = true }
futures = { version = "0.3.31", optional = true }
pollster = { version = "0.3.0", optional = true }

log = "0.4"

[features]
default = ["git", "jj"]
git = ["gix"]
jj = ["jj-lib", "futures", "pollster"]

[dev-dependencies]
tempfile.workspace = true
